# myTVM

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
include/mytvm/: onnx_parser.h
include/mytvm/relay/: module.h  operator.h  operator_registry.h  relay_base.h  relay_expr.h  relay_include.h  transform.h  type.h
include/onnx/: onnx.pb.h
misc/onnx-input/: README.md  create_env.sh  simple-onnx.py
src/: CMakeLists.txt  main.cpp  placeholder.cpp
src/frontend/: onnx_parser.cpp
src/frontend/relay/: operator_registry.cpp
src/onnx/: onnx.pb.cc
src/relay/: relay_expr.cpp
test/: test_main.cpp
